<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:contentDescription="@string/weight_input_description" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:contentDescription="@string/height_input_description" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:contentDescription="@string/calculate_button_description" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/result_text_description" />

</LinearLayout>
